--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section>
             <div>
                 <div class="progress-title-container"> 
-                    <div class="progress-title1">24<span>%</span></div>
+                    <div class="progress-title1">24%</div>
                     <h6>Shots accuracy</h6>
                     <div class="progress-title2">17%</div>
                 </div>
